Fix sidebar container and children to fit. Wrap main section contents and fit on main section evenly.

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,28 +2,58 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  flex-direction: column;
+}
+
+li, a {
+  text-decoration: none;
+  list-style-type: none;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-weight: 700;
+  font-size: 32px;
+  flex: .25 0 auto;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  flex: .25 0 auto;
 }
+
+.container-one {
+  
+}
+
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  
+}
+
+.main-section {
+  display: flex;
+  justify-content: space-around;
+  align-content: flex-end;
+  align-items: baseline;
+  flex-wrap: wrap;
+  gap: 16px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
-  border-radius: 4px;
+  width: 50vh;
 }
+
+
